--- a/style.css
+++ b/style.css
@@ -3393,6 +3393,18 @@ input[type="number"] {
   }
 }
 
+@media (min-width: 1536px) {
+  .view-grid {
+    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
+  }
+}
+
+@media (min-width: 1800px) {
+  .view-grid {
+    grid-template-columns: repeat(6, minmax(0, 1fr)) !important;
+  }
+}
+
 .view-grid .card-img-wrap {
   height: 120px !important;
   min-height: 120px !important;
